tests/paczka1/small_fuzzy/94546566.err
Error in line 1: A293 S881 84,1
Error in line 4: BWdn S402 50,8
Error in line 3: A293 S402 52,8
